--- a/index-1.html
+++ b/index-1.html
@@ -165,7 +165,7 @@ untuk Windows, package .deb untuk Debian/Ubuntu dan .dmg untuk pengguna MacOS.</
 <p>Kini anda berada dalam mesin sebenar (fizikal). Kita akan buat copy
 untuk mesin yang pertama. Buat satu file konfigurasi asas untuk mesin yang
 kita nak pakejkan ini. Simpan sebagai Vagrantfile.pkg:-</p>
-<div class="code"><pre><span class="ss">Vagrant</span><span class="p">:</span><span class="ss">:Config</span><span class="o">.</span><span class="n">run</span> <span class="k">do</span> <span class="o">|</span><span class="n">config</span><span class="o">|</span>
+<div class="code"><pre><span class="no">Vagrant</span><span class="o">::</span><span class="no">Config</span><span class="o">.</span><span class="n">run</span> <span class="k">do</span> <span class="o">|</span><span class="n">config</span><span class="o">|</span>
     <span class="c1"># Forward apache</span>
     <span class="n">config</span><span class="o">.</span><span class="n">vm</span><span class="o">.</span><span class="n">forward_port</span> <span class="mi">80</span><span class="p">,</span> <span class="mi">8080</span>
 <span class="k">end</span>
@@ -350,13 +350,13 @@ get <a href="http://stackoverflow.com/questions/15128135/django-setting-debug-fa
 out the root repository will give us the whole repo with all the branches and 
 tags. For a big repository, this will take sometime. To do shallow checkout, 
 subversion provide the <code>--depth</code> <a href="http://svnbook.red-bean.com/en/1.6/svn.advanced.sparsedirs.html">options</a> to the checkout command.</p>
-<div class="code"><pre><span class="n">svn</span> <span class="n">co</span> <span class="o">--</span><span class="n">depth</span> <span class="n">immediates</span> <span class="n">https</span><span class="o">:</span><span class="c1">//server.com/path/to/repo</span>
-<span class="n">ls</span> <span class="n">repo</span>
-<span class="n">branches</span> <span class="n">tags</span> <span class="n">trunk</span>
-<span class="cp"># at this point all directories are empty</span>
-<span class="n">svn</span> <span class="n">up</span> <span class="n">branches</span><span class="o">/</span><span class="mi">155</span><span class="o">-</span><span class="n">new</span><span class="o">-</span><span class="n">dashboard</span>
-<span class="n">cd</span> <span class="n">trunk</span>
-<span class="n">svn</span> <span class="n">up</span> <span class="o">--</span><span class="n">set</span><span class="o">-</span><span class="n">depth</span> <span class="n">infinity</span>
+<div class="code"><pre>svn co --depth immediates https://server.com/path/to/repo
+ls repo
+branches tags trunk
+# at this point all directories are empty
+svn up branches/155-new-dashboard
+cd trunk
+svn up --set-depth infinity
 </pre></div>
 
 
@@ -404,9 +404,9 @@ exception.</p>
 
 <p>Fortunately it's still installable through pip and also work inside virtualenv.<br>
 Running buildout under virtualenv still raise <code>SandboxViolationError</code> though.  Enough rant, let's get started:-</p>
-<div class="code"><pre><span class="n">virtualenv</span> <span class="n">test</span><span class="o">-</span><span class="n">ansible</span>
-<span class="n">cd</span> <span class="n">test</span><span class="o">-</span><span class="n">ansible</span>
-<span class="p">.</span><span class="o">/</span><span class="n">bin</span><span class="o">/</span><span class="n">pip</span> <span class="n">install</span> <span class="n">ansible</span>
+<div class="code"><pre>virtualenv test-ansible
+cd test-ansible
+./bin/pip install ansible
 </pre></div>
 
 
@@ -446,7 +446,7 @@ set the value <a href="https://github.com/ansible/ansible/blob/devel/examples/an
 </pre></div>
 
 
-<div class="code"><pre><span class="p">.</span><span class="o">/</span><span class="n">bin</span><span class="o">/</span><span class="n">ansible</span><span class="o">-</span><span class="n">playbook</span> <span class="n">main</span><span class="p">.</span><span class="n">yml</span> <span class="o">-</span><span class="n">i</span> <span class="n">ansible_hosts</span><span class="p">.</span><span class="n">ini</span> <span class="o">-</span><span class="n">u</span> <span class="n">root</span>
+<div class="code"><pre>./bin/ansible-playbook main.yml -i ansible_hosts.ini -u root
 </pre></div>
 
 
