--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
         <hr><div class="p-summary">
         <div><p>There are <a href="http://stackoverflow.com/questions/12481639/remove-files-from-git-commit">lot of ways</a> if you search for this, mostly involve in ammending the commit. But if you only accidentally added the files in a development/temporary branch, there's much simpler way than meddling around with the history.</p>
 <p>When you merge branch, git will automatically commit all the changes from that branch. But there's a way to <a href="http://stackoverflow.com/questions/8640887/git-merge-without-auto-commit">stop that</a>.</p>
-<div class="code"><pre><span class="err">$</span> <span class="n">git</span> <span class="n">checkout</span> <span class="o">-</span><span class="n">b</span> <span class="n">new</span><span class="o">-</span><span class="n">layout</span><span class="o">-</span><span class="n">fixout</span>
-<span class="err">$</span> <span class="n">git</span> <span class="n">merge</span> <span class="n">new</span><span class="o">-</span><span class="n">layout</span> <span class="o">--</span><span class="n">no</span><span class="o">-</span><span class="n">commit</span> <span class="o">--</span><span class="n">no</span><span class="o">-</span><span class="n">ff</span>
-<span class="n">Automatic</span> <span class="n">merge</span> <span class="n">went</span> <span class="n">well</span><span class="p">;</span> <span class="n">stopped</span> <span class="n">before</span> <span class="n">committing</span> <span class="n">as</span> <span class="n">requested</span>
-<span class="err">$</span> <span class="n">git</span> <span class="n">status</span>
-<span class="cp"># On branch new-layout-fixout</span>
-<span class="cp"># Changes to be committed:</span>
-<span class="cp">#</span>
-<span class="cp">#       modified:   harga/models.py</span>
-<span class="cp">#       modified:   harga/search_indexes.py</span>
-<span class="cp">#       modified:   harga/templates/base.html</span>
-<span class="cp">#       new file:   harga/templates/sidebar.html</span>
-<span class="cp">#       new file:   scrapers/scrapers.db</span>
+<div class="code"><pre><span class="nv">$ </span>git checkout -b new-layout-fixout
+<span class="nv">$ </span>git merge new-layout --no-commit --no-ff
+Automatic merge went well<span class="p">;</span> stopped before committing as requested
+<span class="nv">$ </span>git status
+<span class="c"># On branch new-layout-fixout</span>
+<span class="c"># Changes to be committed:</span>
+<span class="c">#</span>
+<span class="c">#       modified:   harga/models.py</span>
+<span class="c">#       modified:   harga/search_indexes.py</span>
+<span class="c">#       modified:   harga/templates/base.html</span>
+<span class="c">#       new file:   harga/templates/sidebar.html</span>
+<span class="c">#       new file:   scrapers/scrapers.db</span>
 </pre></div>
 
 
 <p>Let say <code>scrapers/scrapers.db</code> is the file that we accidentally committed and we don't want it. Just remove it from the index:-</p>
-<div class="code"><pre><span class="n">git</span> <span class="n">reset</span> <span class="n">HEAD</span> <span class="n">scrapers</span><span class="o">/</span><span class="n">scrapers</span><span class="p">.</span><span class="n">db</span>
+<div class="code"><pre>git reset HEAD scrapers/scrapers.db
 </pre></div>
 
 
@@ -194,7 +194,7 @@ users exists in multiple groups, I have to repeat defining the user data.</p>
 
 
 <p>Had to deal with the <code>lookup()</code> issue where it keep giving errors:-</p>
-<div class="code"><pre><span class="nl">fatal:</span> <span class="p">[</span><span class="n">devserver</span><span class="p">]</span> <span class="o">=&gt;</span> <span class="n">A</span> <span class="n">variable</span> <span class="n">inserted</span> <span class="n">a</span> <span class="n">new</span> <span class="n">parameter</span> <span class="n">into</span> <span class="n">the</span> <span class="n">module</span> <span class="n">args</span><span class="p">.</span> <span class="n">Be</span> <span class="n">sure</span> <span class="n">to</span> <span class="n">quote</span> <span class="n">variables</span> <span class="k">if</span> <span class="n">they</span> <span class="n">contain</span> <span class="n">equal</span> <span class="n">signs</span> <span class="p">(</span><span class="k">for</span> <span class="n">example</span><span class="o">:</span> <span class="s">"{{var}}"</span><span class="p">).</span>
+<div class="code"><pre><span class="x">fatal: [devserver] =&gt; A variable inserted a new parameter into the module args. Be sure to quote variables if they contain equal signs (for example: "</span><span class="cp">{{</span><span class="nv">var</span><span class="cp">}}</span><span class="x">").</span>
 </pre></div>
 
 
@@ -236,54 +236,7 @@ web server, either <code>mod_wsgi</code>, <code>gunicorn</code>, <code>Paste</co
 WSGI server you can find on PyPI. I can still remember the day when there's none pure Python
 WSGI server exists (except CherryPy) and how I'd really envy Rails's community for having Mongrel.
 That day has long gone.</p>
-<p>Let's dive to the first entry point - when you run your django application through the
-<code>manage.py runserver</code> command. Typical django application (as generated) by the <code>startproject</code> command
-has a file called <code>manage.py</code> at the root of the project directory. This is the file that developer use
-to interact with their application, doing things such as running development server, synching database
-tables with the models definition, loading/exporting data and so much more.</p>
-<p>If you peek into <code>manage.py</code>, it's pretty simple actually:-</p>
-<div class="code"><pre><span class="c">#!./bin/python</span>
-<span class="kn">import</span> <span class="nn">os</span>
-<span class="kn">import</span> <span class="nn">sys</span>
-
-<span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s">"__main__"</span><span class="p">:</span>
-    <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="o">.</span><span class="n">setdefault</span><span class="p">(</span><span class="s">"DJANGO_SETTINGS_MODULE"</span><span class="p">,</span> <span class="s">"acara.settings"</span><span class="p">)</span>
-
-    <span class="kn">from</span> <span class="nn">django.core.management</span> <span class="kn">import</span> <span class="n">execute_from_command_line</span>
-
-    <span class="n">execute_from_command_line</span><span class="p">(</span><span class="n">sys</span><span class="o">.</span><span class="n">argv</span><span class="p">)</span>
-</pre></div>
-
-
-<p>They key line here is at line 10 where a function called <code>execute_from_command_line()</code> being called.
-From here we can traverse to module <code>django.core.management</code> to find out what that function is doing.
-If you're sure where the actual module is located, just open the python console and import the module
-to inspect it's location:-</p>
-<div class="code"><pre><span class="gp">$</span> python
-<span class="go">Python 2.7.3 (default, Aug  1 2012, 05:16:07) </span>
-<span class="go">[GCC 4.6.3] on linux2</span>
-<span class="go">Type "help", "copyright", "credits" or "license" for more information.</span>
-
-<span class="gp">&gt;</span>&gt;&gt; import django.core.management
-<span class="gp">&gt;</span>&gt;&gt; django.core.management
-<span class="go">&lt;module 'django.core.management' from '/home../local/lib/...django/core/management/__init__.pyc'&gt;</span>
-</pre></div>
-
-
-<p>Now we know that module was in <code>$HOME/local/lib/python2.7/site-packages/django/core/management/__init__.py</code>.
-This one thing I love in python. Everything is explicit. You can easily trace down where things comes from
-without even having to understand the whole framework yet. In some other framework or languages where
-implicit import is a norm, you'll have hard time tracing down where certain functions or variables comes from
-until you know the mechanism of the framework.</p>
-<p>Let's look what inside <code>django.core.management</code> module. The function <code>execute_from_command_line()</code> was defined
-at the bottom of the source code. It just a wrapper to other function actually.</p>
-<div class="code"><pre><span class="k">def</span> <span class="nf">execute_from_command_line</span><span class="p">(</span><span class="n">argv</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
-    <span class="sd">"""</span>
-<span class="sd">    A simple method that runs a ManagementUtility.</span>
-<span class="sd">    """</span>
-    <span class="n">utility</span> <span class="o">=</span> <span class="n">ManagementUtility</span><span class="p">(</span><span class="n">argv</span><span class="p">)</span>
-    <span class="n">utility</span><span class="o">.</span><span class="n">execute</span><span class="p">()</span>
-</pre></div></div>
+<p class="more"><a href="posts/django-where-does-the-application-start.html">Read more…</a></p></div>
         
         </div>
         
@@ -593,7 +546,7 @@ also discovered few other small communities, mostly country focused while going 
 
     <span class="kd">var</span> <span class="nx">dismiss</span> <span class="o">=</span> <span class="s1">'[data-dismiss="alert"]'</span>
     <span class="kd">var</span> <span class="nx">Alert</span>   <span class="o">=</span> <span class="kd">function</span> <span class="p">(</span><span class="nx">el</span><span class="p">)</span> <span class="p">{</span>
-    <span class="err">  </span><span class="nx">$</span><span class="p">(</span><span class="nx">el</span><span class="p">).</span><span class="nx">on</span><span class="p">(</span><span class="s1">'click'</span><span class="p">,</span> <span class="nx">dismiss</span><span class="p">,</span> <span class="k">this</span><span class="p">.</span><span class="nx">close</span><span class="p">)</span>
+      <span class="nx">$</span><span class="p">(</span><span class="nx">el</span><span class="p">).</span><span class="nx">on</span><span class="p">(</span><span class="s1">'click'</span><span class="p">,</span> <span class="nx">dismiss</span><span class="p">,</span> <span class="k">this</span><span class="p">.</span><span class="nx">close</span><span class="p">)</span>
 <span class="p">}</span>
 <span class="p">...</span>
 </pre></div>
