--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                     <div class="panel-heading"><h3 class="panel-title">About me</h3></div>
                     <div class="panel-body">
                         <p><img src="images/me-small.jpg" style="float: right; width: 130px; height: 131px;">
-Web developer in Malaysia. Currently work at <a href="http://www.marimore.co.jp/">MARIMORE Inc</a> building internet 
-services using Python and Django web framework.</p>
+Web developer in Malaysia. Currently work at <a href="http://www.xoxzo.com/">Xoxzo Inc</a> building internet telephony 
+services using Python, Django web framework and Freeswitch.</p>
 <p><code>ImportError</code> is an error message emitted by Python when it failed to load certain
 module as requested by programmer. It's a very common error when someone new to
 the language trying it out. This website on the same theme, will try provide help
