--- a/index-old.html
+++ b/index-old.html
@@ -165,7 +165,7 @@
                     <div class="panel-body">
                         <p><img src="images/me-small.jpg" style="float: right; width: 130px; height: 131px;">
 Web developer in Malaysia. Currently work at <a href="http://www.xoxzo.com/">Xoxzo Inc</a> building internet telephony 
-services using Python, Django web framework and Freeswitch.</p>
+services using Python and Django web framework.</p>
 <p><code>ImportError</code> is an error message emitted by Python when it failed to load certain
 module as requested by programmer. It's a very common error when someone new to
 the language trying it out. This website on the same theme, will try provide help
