--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <h1>About Me</h1>
     <p>I'm CTO at Xoxzo Inc, where we build Xoxzo.com, providing API services for developer to develop messaging and voice based application.</p>
 
-    <p>The postings on this site are my own and don't necessarily represent my employer's positions, strategies or opinions. I can be reached via Twitter <a href="https://twitter.com/k4ml">@k4ml</a>.</p>
+    <p>The postings on this site are my own and don't necessarily represent my employer's positions, strategies or opinions. I can be reached via Twitter <a href="https://twitter.com/k4ml">@k4ml</a> or <a href="http://dev.to/k4ml">dev.to/k4ml</a>.</p>
 
     </article>
 </div>
