--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ layout: default
 <ul>
     <li>Python/Django Web Development for PHP Developers at Pycon APAC 2012 in Singapore</li>
     <li>Mastering Python Ecosystem at PyconMY 2015</li>
+    <li>Contributing to Open Source Project at Malaysia Open Source Conference (MOSCMY) 2016</li>
+    <li>Building Your Own Programming Language - The First Step - MOSCMY 2017</li>
     <li>Django From Scratch at Pycon APAC 2017 in Kuala Lumpur, Malaysia</li>
     <li>Mastering Python Ecosystem at PyconID 2018 in Jakarta, Indonesia</li>
 </ul>
