--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     
     <p>I have been a web developer since early 2000 where my first professional experience was in building PHP web applications. We build numerous applications for government agencies such as JKR, KKR, JPN, JPM etc. My next job was with a software agency in Singapore where we build e-commerce websites for our clients using Drupal CMS. Since 2010, I have worked at Xoxzo Inc building web telephony API and managed to grow the company from 2 people into a team of 10 engineers working fully remotely spanning multiple cities from Tokyo to Seoul, Manila, KL, Jakarta, Ufa and Kolkatta. Xoxzo Inc was acquired by a public listed company in Tokyo, Accrete Inc. in 2021.</p>
         
-<p>I'm currently a CTO at LaLokalabs where we're focusing on our next adventure in building services that can help software developers in making their life easier.</p>
+<p>I'm currently a CTO at LaLoka Labs where we're focusing on our next adventure in building services that can help software developers in making their life easier.</p>
 
 <p>I love writing about technologies especially in software development and also giving talks through various platforms. Among the talks I have presented before:-</p>
 
