--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
         
 <p>Other than that I have also been invited to participate in student’s program at local universities such Universiti Teknologi Malaysia (UTM) and Universiti Tun Hussein Onn Malaysia (UTHM) and conducting Python/Django workshop with IT staff at Hospital Universiti Sains Malaysia (HUSM).</p>
 
-<p>The postings on this site are my own and not necessarily represent my employer's positions, strategies or opinions. I can be reached via Twitter <a href="https://twitter.com/k4ml">@k4ml</a> or <a href="http://dev.to/k4ml">dev.to/k4ml</a>.</p>
+<p>The postings on this site are my own and not necessarily represent my employer's positions, strategies or opinions. I can be reached via Twitter <a href="https://twitter.com/k4ml">@k4ml</a>, <a rel="me" href="https://fosstodon.org/@k4ml">Mastodon</a> or <a href="http://dev.to/k4ml">dev.to/k4ml</a>.</p>
 
     </article>
 </div>
