--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ layout: default
     <li>Building Your Own Programming Language - The First Step - MOSCMY 2017</li>
     <li>Django From Scratch at Pycon APAC 2017 in Kuala Lumpur, Malaysia</li>
     <li>Mastering Python Ecosystem at PyconID 2018 in Jakarta, Indonesia</li>
+    <li>Building Remote Software Team, Experiences and Practices at Jomweb Johor Meetup 2022, Medini, Malaysia</li>
+    <li>Remote IDE For Remote Developer at JomLaunch 2022, Kuala Lumpur, Malaysia</li>
+    <li>Remote IDE Best Practices at SEKOPI 2023, UKM, Malaysia</li>
 </ul>
         
 <p>Other than that I have also been invited to participate in student’s program at local universities such Universiti Teknologi Malaysia (UTM) and Universiti Tun Hussein Onn Malaysia (UTHM) and conducting Python/Django workshop with IT staff at Hospital Universiti Sains Malaysia (HUSM).</p>
